force-app/main/default/objects/pcldm__Exception_Log__c/pcldm__Exception_Log__c.object-meta.xml
<CustomObject>
    <description>This custom object stores the exceptions created by an application.</description>
    <label>Exception Log</label>
    <nameField>
        <displayFormat>EL-{0000}</displayFormat>
        <label>Exception Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exception Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>