force-app/main/default/objects/pcldm__Exception_Log__c/fields/pcldm__Application_Name__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Application_Name__c</fullName>
    <label>Application Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>