force-app/main/default/objects/pcldm__Exception_Log__c/fields/pcldm__Class_Name__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Class_Name__c</fullName>
    <label>Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>