force-app/main/default/objects/pcldm__Exception_Log__c/fields/pcldm__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Error_Message__c</fullName>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>