force-app/main/default/objects/pcldm__Exception_Log__c/fields/pcldm__Error_Support_Data__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Error_Support_Data__c</fullName>
    <label>Error Support Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>