force-app/main/default/objects/pcldm__Exception_Log__c/fields/pcldm__Exception_Running_User__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Exception_Running_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exception Running User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Exception_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>