force-app/main/default/objects/pcldm__Exception_Log__c/fields/pcldm__Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Exception_Type__c</fullName>
    <label>Exception Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>