force-app/main/default/objects/pcldm__Exception_Log__c/fields/pcldm__Line_Number__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Line_Number__c</fullName>
    <label>Line Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>