force-app/main/default/objects/pcldm__Exception_Log__c/fields/pcldm__Method_Name__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Method_Name__c</fullName>
    <label>Method Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>