force-app/main/default/objects/pcldm__Exception_Log__c/fields/pcldm__Module_Name__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Module_Name__c</fullName>
    <label>Module Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>