force-app/main/default/objects/pcldm__Exception_Log__c/fields/pcldm__Salesforce_Limits__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Salesforce_Limits__c</fullName>
    <label>Salesforce Limits</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>