force-app/main/default/objects/pcldm__Exception_Log__c/fields/pcldm__Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Stack_Trace__c</fullName>
    <label>Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>